--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "description": "",
   "dependencies": {
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "hbs": "^4.0.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^5.13.1",
     "sqlite3": "^4.0.9"
   }
